feat:llm analysis
